<?xml version="1.0" encoding="utf-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/gris"
    tools:context=".MenuPrinces">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp"
        tools:ignore="ExtraText,UseCompoundDrawables">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3dp"
            android:text="@string/text_name2"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="342dp"
            android:layout_height="309dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="90dp"
            app:srcCompat="@drawable/pc" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_login"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="69dp"
                android:text="@string/button_login"
                app:cornerRadius="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sigh"
                android:text="@string/button_sigh"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="69dp"
                android:layout_marginTop="50dp"
                app:cornerRadius="20dp"
                android:layout_alignParentRight="true"
                />


        </RelativeLayout>


    </LinearLayout>


</ScrollView>
